always show tapsigner in airgapped import options